--- a/lab3/static/styles/main.css
+++ b/lab3/static/styles/main.css
@@ -1,162 +1,161 @@
-html {
-    --def-family: 'Inter', sans-serif;
-    --def-fsize: 20px;
-    --def-fstyle: normal;
-    --def-fweight: 400;
-    --def-fheight: normal;
-    height: 100%;
-    width: 100%;
-  }
-  
-  .dark-theme {
-    --def-bg: #1F1F1F;
-    --def-color: white;
-  }
-  .white-theme {
-    --def-bg: white;
-    --def-color: black;
-  }
-  
-  body {
-    color: var(--def-color);
-    background: var(--def-bg);
-    font-family: var(--def-family);
-    font-size: var(--def-fsize);
-    font-style: var(--def-fstyle);
-    font-weight: var(--def-fweight);
-    line-height: var(--def-fheight);
-    height: 100%;
-    width: 100%;
-  }
+:root {
+  --def-family: 'Inter', sans-serif;
+  --def-fsize: 20px;
+  --def-fstyle: normal;
+  --def-fweight: 400;
+  --def-fheight: normal;
+  height: 100%;
+  width: 100%;
+}
 
-  .small-text {
-    font-size: 22px;
-  }
-  
-  h1 {
-    font-size: 82px;
-    margin: 20px 0;
-  }
-  
-  h2 {
-    font-size: 64px;
-    padding-bottom: 30px;
-  }
-  
-  h3 {
-    font-size: 30px;
-    text-align: center;
-    padding: 10px 0;
-  }
+.dark-theme {
+  --def-bg: #1F1F1F;
+  --def-color: white;
+}
+.white-theme {
+  --def-bg: white;
+  --def-color: black;
+}
 
-  h5 {
-    font-size: 30px;
-  }
+body {
+  color: var(--def-color);
+  background: var(--def-bg);
+  font-family: var(--def-family);
+  font-size: var(--def-fsize);
+  font-style: var(--def-fstyle);
+  font-weight: var(--def-fweight);
+  line-height: var(--def-fheight);
+  height: 100%;
+  width: 100%;
+}
 
-  label {
-    font-size: 30px;
-    padding: 20px 0;
-    display: block;
-  }
+.small-text {
+  font-size: 22px;
+}
 
-  a{
-    cursor: pointer;
-    font-size: 30px;
-    text-align: center;
-  }
+h1 {
+  font-size: 82px;
+  margin: 20px 0;
+}
 
-  a:hover {
-    text-decoration: underline;
-  }
+h2 {
+  font-size: 64px;
+  padding-bottom: 30px;
+}
 
-  input, select, textarea {
-    max-width: 100%;
-    max-height: 400px;
-    background: none;
-    width: 100%;
-    color: white;
-    font-size: 30px;
-    margin: 5px 0;
-  }
+h3 {
+  font-size: 30px;
+  text-align: center;
+  padding: 10px 0;
+}
 
-  textarea {
-    min-width: 100%;
-    min-height: 50px;
-  }
+h5 {
+  font-size: 30px;
+}
 
-  textarea, select {
-    border: 1px solid #cecece ;
-    border-radius: 10px;
-  }
+label {
+  font-size: 30px;
+  padding: 20px 0;
+  display: block;
+}
 
-  input{
-    background: none;
-    border: none;
-    border-bottom: 2px solid white;
-    outline: none;
-  }
+a{
+  cursor: pointer;
+  font-size: 30px;
+  text-align: center;
+}
 
-  input[type='radio'],
-  input[type='checkbox']{
-    width: 20px;
-    height: 20px;
-    border-radius: 5px;
-    border: none;
-    outline: none;
-    margin: auto 5px;
-  }
+a:hover {
+  text-decoration: underline;
+}
 
-  input[type='file']{
-    border: none;
-  }
+input, select, textarea {
+  max-width: 100%;
+  max-height: 400px;
+  background: none;
+  width: 100%;
+  font-size: 30px;
+  margin: 5px 0;
+}
 
-  button, .button {
-    width: 100%;
-    font-size: 30px;
-    padding: 10px 0;
-    border: none;
-    border-radius: 15px;
-    background: #cecece;
-    display: block;
-    text-align: center;
-    color: #1F1F1F;
-  }
-  button:hover, .button:hover {
-    background: #aaa;
-    text-decoration: none;
-  }
+textarea {
+  min-width: 100%;
+  min-height: 50px;
+}
 
-  .section-heading {
-    text-align: center;
-    padding: 80px 0;
-  }
-  
-  p {
-    font-size: 30px;
-  }
-  .pretty-link {
-    background: linear-gradient(91deg, #ffc0ef 0%, #ffc6c6 99.7%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
+textarea, select {
+  border: 1px solid #cecece ;
+  border-radius: 10px;
+}
 
-  .pretty-link:hover {
-    background: #fcd6d6;
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    text-decoration: underline;
-  }
+input{
+  background: none;
+  border: none;
+  border-bottom: 1px solid rgba(0,0,0,.1);
+  outline: none;
+}
 
-  
-  footer {
-    padding: 30px 0 30px 0 ;
-    text-align: center;
-    font-size: 25px;
-    background-color: #000;
-    color: white;
-  }
+input[type='radio'],
+input[type='checkbox']{
+  width: 20px;
+  height: 20px;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  margin: auto 5px;
+}
+
+input[type='file']{
+  border: none;
+}
+
+button, .button {
+  width: 100%;
+  font-size: 30px;
+  padding: 10px 0;
+  border: none;
+  border-radius: 15px;
+  background: #cecece;
+  display: block;
+  text-align: center;
+  color: #1F1F1F;
+}
+button:hover, .button:hover {
+  background: #aaa;
+  text-decoration: none;
+}
+
+.section-heading {
+  text-align: center;
+  padding: 80px 0;
+}
+
+p {
+  font-size: 30px;
+}
+.pretty-link {
+  background: linear-gradient(91deg, #ffc0ef 0%, #ffc6c6 99.7%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.pretty-link:hover {
+  background: #fcd6d6;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-decoration: underline;
+}
+
+
+footer {
+  padding: 30px 0 30px 0 ;
+  text-align: center;
+  font-size: 25px;
+  background-color: #000;
+  color: white;
+}
 
 .hero-flex {
   display: inline-flex;
@@ -276,7 +275,6 @@ html {
 .grid-layout {
   display: flex;
   justify-content: center;
-  align-items: center;
   align-content: center;
   gap: 50px;
   flex-wrap: wrap;
